logs/ncutils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ncutils'...
Compiling './lib/python3.5/site-packages/ncutils/__init__.py'...
***   File "./lib/python3.5/site-packages/ncutils/__init__.py", line 68
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ncutils/base.py'...
***   File "./lib/python3.5/site-packages/ncutils/base.py", line 16
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ncutils/ncsh.py'...
***   File "./lib/python3.5/site-packages/ncutils/ncsh.py", line 16
    print "%s %s by user/%s"%(self.obj.smid, self.obj.title, self.obj.user_id)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ncutils/recipes.py'...
***   File "./lib/python3.5/site-packages/ncutils/recipes.py", line 37
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ncutils/util.py'...
***   File "./lib/python3.5/site-packages/ncutils/util.py", line 19
    print "-----------------------------------------------------------------------------"
                                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ncutils/video.py'...
***   File "./lib/python3.5/site-packages/ncutils/video.py", line 101
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ncutils-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
